Integer.valueOf() instead of new Integer().
git-svn-id: svn://source.pentaho.org/svnroot/pentaho-open-admin-console/trunk@31185 5d404267-db13-0410-8476-b1f6b398e63a